fix: lol at that letter-spacing

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -31,5 +31,5 @@ $line-height-root: 1.75;
 }
 
 .letter-spacing {
-  letter-spacing: 1.25rem;
+  letter-spacing: .25rem;
 }
